Small changes and bugfixes
- <textarea> set to `display:block` to make whitespace around it insignificant.

--- a/css/idea.less
+++ b/css/idea.less
@@ -326,10 +326,12 @@
 				box-sizing: border-box;
 				color: #B6B7BA;
 				cursor: pointer;
+				display: block;
 				font-family: inherit;
 				font-size: 1.5em;
 				font-weight: bold;
 				height: 55px;
+				margin-bottom: 5px;
 				outline: none;
 				padding: 10px;
 				position: relative;
